[tool.poetry]
name = "longdistanceparty"
version = "0.1.0"
description = "Streaming Media with Friends"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}
aiofiles = "^0.4.0"
django = "^3.0.5"
channels = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
